[gd_scene load_steps=7 format=3 uid="uid://bux54jaws0j36"]

[ext_resource type="Script" path="res://scripts/save_system.gd" id="1_el0jm"]
[ext_resource type="PackedScene" uid="uid://dq7jxi5126bxr" path="res://name_enter.tscn" id="2_5glt4"]
[ext_resource type="PackedScene" uid="uid://6ci0vroscf37" path="res://description_enter.tscn" id="3_wk161"]
[ext_resource type="Script" path="res://scripts/description_save.gd" id="4_kjpw2"]
[ext_resource type="PackedScene" uid="uid://dbraeuehrgc0" path="res://container_select.tscn" id="5_7f4qc"]
[ext_resource type="Script" path="res://save_button_signal.gd" id="5_lbckc"]

[node name="Control" type="Control" groups=["persist_config"]]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_el0jm")

[node name="TitleLabel" parent="." instance=ExtResource("2_5glt4")]
layout_mode = 0
offset_left = 256.0
offset_top = 0.0
offset_right = 896.0
offset_bottom = 66.0

[node name="DescriptionLabel" parent="." instance=ExtResource("3_wk161")]
layout_mode = 0
offset_left = 256.0
offset_top = 128.0
offset_right = 896.0
offset_bottom = 384.0
script = ExtResource("4_kjpw2")

[node name="ContainerSelect" parent="." instance=ExtResource("5_7f4qc")]
layout_mode = 0
offset_left = 512.0
offset_top = 424.0
offset_right = 640.0
offset_bottom = 472.0

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 512.0
offset_right = 640.0
offset_bottom = 577.0
rotation = -0.00191983
text = "save"
script = ExtResource("5_lbckc")

[connection signal="pressed" from="SaveButton" to="." method="save_note"]
